# criticalmaas-nbmg-import

./: .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  CriticalMAAS.md  Data Sources.md  Makefile  README.md  download.py  pyproject.toml  requirements.txt
app/: register.py
docs/: Sources.md
macrostrat/criticalmaas/: api.py  config.py  run.py  types.py
macrostrat/criticalmaas/scrapers/: nbmg.py  ngmdb.py  s3.py
macrostrat/map_ingestion/: api.py  driver.py  run.py  types.py
macrostrat/map_ingestion/scrapers/: hackathon_month_06.py  nbmg.py  ngmdb.py  s3.py
macrostrat/nbmg_import/: api.py  download.py  integrate.py  register.py  run.py  scrape.py  types.py  utils.py
